# Testes5

./: .gitmodules
fruc_dataset_choupal_launch/: CMakeLists.txt  package.xml
fruc_dataset_choupal_launch/launch/: choupal.launch
ranger_datasets/: CMakeLists.txt  package.xml
ranger_datasets/launch/: record_ranger_raw_sensors.launch
ranger_datasets/launch/play_dataset_2022_04_04/: dataset_instructions.txt  play_dataset_2022_04_04.launch  static_tfs_dataset_2022_04_04.launch
ranger_datasets/rviz/: ranger_dataset_2022_04_04.rviz
